# tca9554-rs

./: Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
src/: address.rs  driver.rs  lib.rs
tests/: integration_test.rs
